# peeknth

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs  peekablede.rs  peekdn.rs  peekn.rs
src/peekdn/: core.rs  mod.rs  sizedpeekdn.rs
src/peekn/: core.rs  mod.rs  sizedpeekn.rs
src/util/: either.rs  func.rs  mod.rs  peeksource.rs  ringbuffer.rs
tests/: basic.rs
